--- a/src/Leonardo/Leonardo.csproj
+++ b/src/Leonardo/Leonardo.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageId>anthony.parent.Fibonacci</PackageId>
   </PropertyGroup>
 
 </Project>
