--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -51,9 +51,10 @@ jobs:
       run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=./coverage/opencover.xml
     - name: Publish Fibonacci to Nugget
       working-directory: ./src/Leonardo.Fibonacci
+      if: github.ref == 'refs/heads/main'
       run: | 
         dotnet pack -c Release -p:PackageVersion=${{ needs.tags.outputs.new_version }}
-        dotnet nuget push ./bin/Release/Leonardo.Fibonacci.${{ needs.tags.outputs.new_version }}.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+        dotnet nuget push ./bin/Release/anthony.parent.Fibonacci.${{ needs.tags.outputs.new_version }}.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
         
     - run: dotnet publish ./src/Leonardo.Web/Leonardo.Web.csproj --self-contained true --output ./win-x64/fibonacci -c Release -r win-x64 /p:PublishSingleFile=true
     - name: Upload WebApp1 Build Artifact
