--- a/src/Demo/appsettings.json
+++ b/src/Demo/appsettings.json
@@ -5,7 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
+  "Application": {        
+    "Name": "Fibonacci",   
+    "Message": "Bienvenue"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost,1433;Initial Catalog=FibonacciData;Integrated Security=False;User ID=sa;Password=Password!;MultipleActiveResultSets=True;TrustServerCertificate=True" }
 }
